feat: add new endpoint to check stay availability
